listfeedback alignment style fix and get min height

--- a/src/pages/Feedbacks/styles.css
+++ b/src/pages/Feedbacks/styles.css
@@ -1,7 +1,12 @@
 .list-feedback-table{
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
+    align-items: flex-start;
+    height: 100%;
+    max-height: 550px;
+    width: 100%;
+    overflow-y: auto;
+    box-shadow: 1px 1px #888888;
+    border-radius: 4px;
   }
   
